style.css
body {
  font-family: Helvetica, sans-serif;
  color: #fff;
  background-image: url("redmap.jpg");
  text-align: center;
}

a {
    color: #fff
}

.button-dark {
    background: rgb(50, 50, 50);
    color: #fff;
}

.button-red {
    background: rgb(220, 50, 50);
    color: #fff;
}

#header {
  padding: 10px;
  margin-top: 20px;
  font-size: 22px;
}

#content {
  margin-left: auto;
  margin-right: auto;
  padding: 20px;
}

.picker {
  background: rgba(0,0,0,0.6);
  clear: left;
  padding: 10px;
  margin-top: 10px;
}

#stagePicker {
  min-height: 150px;
}

#stageName, .target , #wildcard {
  color: rgb(202, 60, 60);
}

#targetPicker {
  min-height: 300px;
}

#wildcardPicker {
  min-height: 150px;
}

#targets {
  display: inline-block;  
  padding-bottom: 20px;
}

.target {
  float: left;
  height: 235px;
  width: 300px;
  padding: 10px;
  margin-left: 10px;
  margin-right: 10px;
  background-color: rgba(0,0,0,0.3);
}

.targetName {;
  font-weight: bold;
  font-size: 22px;
}

#footer {
  padding: 10px; 
}

